# streaming-pipelines

./: .gitignore  .talismanrc  README.md  setup.sh
.circleci/: config.yml
CitibikeApiProducer/: Dockerfile-station-france-marseille  Dockerfile-station-nyc
CitibikeApiProducer/src/main/resources/: application-station-france-marseille.properties  application-station-france.properties  application-station-nyc.properties
CitibikeApiProducer/src/test/java/com/tw/models/: MessageMetadataTest.java
CitibikeApiProducer/src/test/java/com/tw/services/: ApiProducerTest.java
RawDataSaver/: Dockerfile-station-data-FR-MS  Dockerfile-station-data-France  Dockerfile-station-data-SF  Dockerfile-station-information  Dockerfile-station-status
StationConsumer/: Dockerfile
StationConsumer/src/main/scala/com/tw/apps/: OverwriteCSVSink.scala  StationApp.scala  StationData.scala  StationDataTransformation.scala
StationConsumer/src/test/scala/com/tw/apps/: StationDataTransformationTest.scala
airflow/: README.md  pyproject.toml
airflow/dags/: delivery_file_monitoring.py  validate_mart_data.py
airflow/test/: airflow_test.py  validate_mart_data_test.py
docker/: docker-compose.yml
hdfs/: seed.sh
hive_scripts/: station_mart.sql
sbin/: buildProducers.sh  deploy.sh  runAirflowTests.sh
zookeeper/: seed.sh
