[tool.poetry]
name = "airflow"
version = "0.1.0"
description = ""
authors = ["BugDiver <vinaysh@thoughtworks.com>"]

[tool.poetry.dependencies]
python = "^3.9"
apache-airflow = "1.10.15"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
